--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
