--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/server/node_modules
+/front-end/node_modules
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+server/coverage
 
 # production
 /build
